Fixed bug with spacing issue in UI and menutabs

--- a/ui/themes/default/style.css
+++ b/ui/themes/default/style.css
@@ -198,8 +198,8 @@ html {
 /**** Panel Menu ***/
 div.menutabs {
     text-align: center;
-    padding-top: 1em;
-    padding-bottom: 0em;
+    padding-top: 0em;
+    padding-bottom: 1em;
 }
 
 div.menutabs table.paneltabs {
